--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,6 +32,10 @@ repos:
     rev: "v0.37.0"
     hooks:
       - id: markdownlint
+        exclude: |
+          (?x)^(
+                .github/pull_request_template.md
+            )$
 
   - repo: https://github.com/jumanjihouse/pre-commit-hooks
     rev: "3.0.0"
