Update dotfiles when attaching to devcontainer
Signed-off-by: John Strunk <john.strunk@gmail.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,5 +6,8 @@
 	},
 	"postCreateCommand": {
 		"Initialize pre-commit environment": "nohup sh -c 'pre-commit install -f --install-hooks &' > /dev/null"
+	},
+	"postAttachCommand": {
+		"Update dotfiles": "chezmoi update --apply --verbose"
 	}
 }
