--- a/2022/01/package.json
+++ b/2022/01/package.json
@@ -1,7 +1,7 @@
 {
   "name": "01",
   "version": "1.0.0",
-  "description": "",
+  "description": "Day 1",
   "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
